--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,7 +5,11 @@
       {
         "name": "next"
       }
-    ]
+    ],
+                "paths": {
+      "@/*": ["./src/*"]
+    }
+
   },
   "include": [
     "**/*.ts",
